# umicount

./: README.md  pyproject.toml
tests/: test_process_fastq.py  test_process_fastx.py  test_umicount.py  test_umicount_umi_correction.py  test_umicount_write_output.py  test_umiextract_process_entry.py  test_umiextract_process_fastq.py  test_umiextract_utility_functions.py
umicount/: cli.py  process_smartseq.py  umicount.py  umiextract.py
