[tool.poetry]
name = "umicount"
version = "0.1.0"
description = "umi counting tool for SmartSeq3 libraries"
authors = ["Leo Förster <leoforster@gmail.com>"]
keywords = ["biology", "bioinformatics", "single cell", "transcriptomics", "smartseq3"]
maintainers = ["Leo Förster <leoforster@gmail.com>", "Jooa Hooli <code@jooa.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
HTSeq = "^2"

[tool.poetry.scripts]
umicount = "umicount.cli:umicount"
umiextract = "umicount.cli:umiextract"

[tool.poetry.group.dev.dependencies]
pytest = "^5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
