[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "umicount"
version = "0.1.0"
description = "UMI counting tool for SmartSeq3 libraries"
authors = ["Leo Förster <leoforster@gmail.com>"]
keywords = ["biology", "bioinformatics", "single cell", "transcriptomics", "smartseq3"]
maintainers = ["Leo Förster <leoforster@gmail.com>", "Jooa Hooli <code@jooa.xyz>"]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "HTSeq",
    "regex",
]

[project.optional-dependencies]
dev = [
    "pytest>=5",
]

[project.scripts]
umicount = "umicount.cli:umicount"
umiextract = "umicount.cli:umiextract"

[tool.setuptools.packages.find]
where = ["."]
